--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.1",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "umi": "^4.3.14"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.3",
-    "@umijs/plugins": "^4.3.14"
+    "@umijs/plugins": "^4.3.14",
+    "typescript": "^5.0.3"
   }
 }
