--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "react-org-tree": "^1.0.1",
     "umi": "^4.3.14"
   },
   "devDependencies": {
